objects/LLC_BI__Treasury_Service_Involvement__c.object
<CustomObject>
    <description>This object stores the Treasury Service Maintenance details that describe an authorized users involvement with an analyzed account.</description>
    <fields>
        <fullName>Access_to_ZBA_Reporting__c</fullName>
        <label>Access to ZBA Reporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Can_Review_Approve_Exceptions__c</fullName>
        <label>Can Review/Approve Exceptions?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Out_Service_Reason__c</fullName>
        <label>Close Out Service Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Out_Service__c</fullName>
        <label>Close Out Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Change__c</fullName>
        <label>Credit Limit Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earnings_Credit_Adjustment__c</fullName>
        <label>Earnings Credit Adjustment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Access_to_ZBA_Master_Account__c</fullName>
        <label>Has Access to ZBA Master Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Analyzed_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Analyzed Account for this Involvement.</description>
        <label>Analyzed Account</label>
        <referenceTo>LLC_BI__Analyzed_Account__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional lookup field to the Authorized User for this Involvement.</description>
        <label>Authorized User</label>
        <referenceTo>LLC_BI__Authorized_User__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <description>This is a required lookup field to the Treasury Service for this Involvement.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Treasury Involvements</relationshipLabel>
        <relationshipName>Treasury_Involvements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manual_Wire_Limit__c</fullName>
        <label>Manual Wire Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Credit_Limit__c</fullName>
        <label>New Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Earnings_Credit__c</fullName>
        <label>New Earnings Credit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Credit_Limit__c</fullName>
        <label>Old Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Earnings_Credit__c</fullName>
        <label>Old Earnings Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_New_Equipment__c</fullName>
        <label>Order New Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Manual_Wire__c</fullName>
        <label>Request Manual Wire</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scanner_update__c</fullName>
        <label>Scanner Update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Address__c</fullName>
        <label>Update Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>50-500</fullName>
                </value>
                <value>
                    <fullName>500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Treasury Service Involvement</label>
    <nameField>
        <label>Treasury Service Involvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Service Involvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>